[package]
name = "dejavu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ocr"
path = "src/poc/ocr/main.rs"

[[bin]]
name = "screenshot"
path = "src/poc/screenshot/main.rs"

[[bin]]
name = "fts"
path = "src/poc/fts/main.rs"

[dependencies]
screenshots = "0.6.0"
rusty-tesseract = "1.1.5"
image = "0.24.6"
rusqlite = { version = "0.29.0", features = ["bundled"] }
anyhow = "1.0.71"
async-trait = "0.1.71"
tokio = { version = "1.29.1", features = ["full"] }
