[package]
name = "dejavu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ocr"
path = "src/poc/ocr/main.rs"

[[bin]]
name = "screenshot"
path = "src/poc/screenshot/main.rs"

[dependencies]
screenshots = "0.6.0"
rusty-tesseract = "1.1.5"
image = "0.24.6"
anyhow = "1.0.71"
async-trait = "0.1.71"
tokio = { version = "1.29", features = ["full"] }
itertools = "0.11.0"
uuid = { version = "1.4.0", features = ["v4"] }
axum = "0.6.18"
serde_json = "1.0.102"
serde = { version = "1.0", features = ["derive"] }
syn = "2.0"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls"] }
sqlx-sqlite = "0.7.0"
futures = "0.3.28"
