[package]
name = "dejavu"
version = "0.1.0"
edition = "2021"

[features]
default = []
in-memory = []

[dependencies]
chrono = "0.4"
screenshots = "0.6.0"
rusty-tesseract = { version = "*", git = "https://github.com/STRRL/rusty-tesseract", rev = "84418ef" }
image = "0.24.6"
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1.71"
tokio = { version = "1.29", features = ["full"] }
itertools = "0.11.0"
uuid = { version = "1.4.0", features = ["v4"] }
axum = "0.6.18"
serde_json = "1.0.102"
serde = { version = "1.0", features = ["derive"] }
syn = "2.0"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls"] }
sqlx-sqlite = "0.7.0"
futures = "0.3.28"
dirs = "5.0"
tokio-util = { version = "0.7.8", features = ["io"] }
rust-embed = { version = "6.8.1", features = ["axum-ex"] }
mime_guess = "2"
